--- a/npm/www-pack/package.json
+++ b/npm/www-pack/package.json
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.2",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
     "json-loader": "^0.5.4",
@@ -25,6 +26,7 @@
     "less-loader": "^4.0.3",
     "style-loader": "^0.18.1",
     "uglify-js": "^3.0.11",
+    "url-loader": "^0.5.8",
     "webpack": "^2.6.0",
     "webpack-dev-server": "^2.4.5"
   }
